--- a/ImitateGuDong/ImitateGuDong/Info.plist
+++ b/ImitateGuDong/ImitateGuDong/Info.plist
@@ -20,6 +20,19 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>请授权后台访问位置，为您提供更专业的运动数据分析</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>请授权访问位置，为您提供更专业的运动数据分析</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
