--- a/ImitateGuDong/ImitateGuDong/Info.plist
+++ b/ImitateGuDong/ImitateGuDong/Info.plist
@@ -31,6 +31,7 @@
 	<string>请授权访问位置，为您提供更专业的运动数据分析</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
